--- a/Settings/MasterSettings.html
+++ b/Settings/MasterSettings.html
@@ -20,7 +20,7 @@
 
 
 
-<iframe src="mastersettings/PersonnelSettings.html" name="settingsmainshow" class="settingsbodydata" ></iframe>
+<iframe src="mastersettings/PersonnelSettings.html" name="settingsmainshow" class="settingsbody" ></iframe>
 </div>
 
 
