--- a/Settings/mastersettings/PersonnelSettings.html
+++ b/Settings/mastersettings/PersonnelSettings.html
@@ -6,40 +6,20 @@
 
 </head>
 <body>
+<div class="subsettingsheader">
 
-<H1>Personnel Settings</H1>
 
-<div class:"horizantal_Menu">
+<fieldset>
+    <div class="subsettingsmainmenu">
+        <a href="personnelsettings/Nationality.html" target="subsettingsmainshow">Nationality</a>
+        <a href="mastersettings/Financial Settings.html" target="subsettingsmainshow">Financial Settings</a>
+        <a href="mastersettings/Classifications Settings.html" target="subsettingsmainshow">Classifications Settings</a>
+    </div> 
+    </fieldset>
 
+    
+<iframe src="personnelsettings/Nationality.html" name="subsettingsmainshow" class="subsettingsbody" ></iframe>
 
 </div>
-
-<table >
-    <tr>
-<th>del</th>
-<th>code</th>
-<th>English Description</th>
-<th>Arabic Description</th>
-    </tr>
-    <tr>
-<td><input type="radio"></td>
-<td>1</td>
-<td>hello</td>
-<td>مرحبا</td>
-    </tr>
-    <tr>
-        <td><input type="radio"></td>
-        <td>2</td>
-        <td>bye</td>
-        <td>bye</td>
-        
-            </tr>
-
-
-
-
-</table>
-
-
 </body>
 </html>
