--- a/Settings/mastersettings/PersonnelSettings.html
+++ b/Settings/mastersettings/PersonnelSettings.html
@@ -11,14 +11,14 @@
 
 <fieldset>
     <div class="subsettingsmainmenu">
-        <a href="personnelsettings/Nationality.html" target="subsettingsmainshow">Nationality</a>
+        <a href="personnelsettings/Nationality.php" target="subsettingsmainshow">Nationality</a>
         <a href="mastersettings/Financial Settings.html" target="subsettingsmainshow">Financial Settings</a>
         <a href="mastersettings/Classifications Settings.html" target="subsettingsmainshow">Classifications Settings</a>
     </div> 
     </fieldset>
 
     
-<iframe src="personnelsettings/Nationality.html" name="subsettingsmainshow" class="subsettingsbody" ></iframe>
+<iframe src="personnelsettings/Nationality.php" name="subsettingsmainshow" class="subsettingsbody" ></iframe>
 
 </div>
 </body>
