--- a/Settings/mastersettings/PersonnelSettings.html
+++ b/Settings/mastersettings/PersonnelSettings.html
@@ -12,8 +12,8 @@
 <fieldset>
     <div class="subsettingsmainmenu">
         <a href="personnelsettings/Nationality.html" target="subsettingsmainshow">Nationality</a>
-        <a href="personnelsettings/Religion.php" target="subsettingsmainshow">Religion</a>
-        <a href="personnelsettings/HomeCountry.php" target="subsettingsmainshow">Home Country</a>
+        <a href="personnelsettings/Religion.html" target="subsettingsmainshow">Religion</a>
+        <a href="personnelsettings/HomeCountry.html" target="subsettingsmainshow">Home Country</a>
     </div> 
     </fieldset>
 
