--- a/Settings/MasterSettings.html
+++ b/Settings/MasterSettings.html
@@ -13,8 +13,10 @@
 <fieldset>
 <div class="settingsmainmenu">
     <a href="mastersettings/PersonnelSettings.html" target="settingsmainshow">Personnel Settings</a>
+    <a href="mastersettings/EmployementSettings.html" target="settingsmainshow">Employment Settings</a>
     <a href="mastersettings/Financial Settings.html" target="settingsmainshow">Financial Settings</a>
     <a href="mastersettings/Classifications Settings.html" target="settingsmainshow">Classifications Settings</a>
+    <a href="mastersettings/StructureSettings.html" target="settingsmainshow">Structure Settings</a>
 </div> 
 </fieldset>
 
