--- a/Employee Profile.html
+++ b/Employee Profile.html
@@ -4,6 +4,8 @@
  <head>
 
    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+   <script type="text/javascript" src="loademployeesettings.js"> </script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <link rel="stylesheet" href="style.css">
    <link rel="html" href="index.html">
@@ -44,11 +46,8 @@
 				<input name="FamilyName" type="text" placeholder="Family Name" /></label>
 				
 				<!--nationality-->
-				 <label for=""><span>Nationality :</span><select name="Nationality">
-				 <option value="0" selected>Choose</option>
-                 <option value="1">Jordan</option>
-                 <option value="2">Lebanon</option>
-                 <option value="3">Saudi</option>
+				 <label for=""><span>Nationality :</span><select name="Nationality" id="Nationality">
+				
                   </select></label>
 
 
@@ -198,6 +197,7 @@
   </div>
  <script type="text/javascript" src="java.js"></script>
  <script type="text/javascript" src="update.js"></script>
+ 
 
   </body>
 
