--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
         
-        <a href="Employee Profile.php" target="mainshow">Employee Profile</a>
+        <a href="Employee Profile.html" target="mainshow">Employee Profile</a>
         
         <div class="submenu">
          <button class="submenubtn">Transactions</button>
